--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
     "dotenv": "^16.4.5",
+    "mercadopago": "^2.0.11",
     "pinia": "^2.0.11",
+    "qrcode": "^1.5.4",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0",
-    "mercadopago": "^2.0.11"
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.3.0",
