--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@zxing/browser": "^0.1.5",
     "axios": "^1.2.1",
     "dotenv": "^16.4.5",
+    "html2canvas": "^1.4.1",
     "mercadopago": "^2.0.11",
     "pinia": "^2.0.11",
     "qrcode": "^1.5.4",
